added VerificationController and corresponding endpoints
